--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="/src/css/rolagem.css">
 
 
-    <title>Mini Portifólio</title>
+    <title>Mini Portfólio</title>
 </head>
 <body>
     <main class="cartao">
